[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
name = "solana-geyser-plugin-postgres"
description = "The Solana AccountsDb plugin for PostgreSQL database."
repository = "https://github.com/solana-labs/solana-accountsdb-plugin-postgres"
documentation = "https://docs.rs/solana-validator"
version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = { workspace = true }
bytemuck = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
crossbeam-channel = { workspace = true }
log = { workspace = true }
openssl = { workspace = true }
postgres = { version = "0.19.7", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.6", features = ["derive"] }
postgres-openssl = { version = "0.5.0" }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
solana-geyser-plugin-interface = { workspace = true }
solana-logger = { workspace = true }
solana-measure = { workspace = true }
solana-metrics = { workspace = true }
solana-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
thiserror = { workspace = true }
tokio-postgres = { version = "0.7.10" }
sparse-merkle-tree = { git = "https://github.com/MultiAdaptive/sparse-merkle-tree.git", commit = "1c53fd1bb27d8649ce1f2260af6fa43f7aee7436" }
hex = "0.4.3"

[dev-dependencies]
libc = { workspace = true }
libloading = { workspace = true }
serial_test = { workspace = true }
socket2 = { workspace = true, features = ["all"] }

solana-account-decoder = { workspace = true }
solana-core = { workspace = true }
solana-local-cluster = { workspace = true }
solana-net-utils = { workspace = true }
solana-streamer = { workspace = true }
tempfile = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

